tests/should_succeed/bug/1921.rs
use creusot_std::prelude::*;

#[ensures(true)]
pub fn foo<T>(x: &T) -> *const T {
    x
}
